# ukrgeo

./: .gitignore  Cargo.toml  Dockerfile  Rocket.toml  db.sqlite  readme.md  test.http
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.vite-config.json  vite.config.ts
frontend/public/: favicon.ico~
frontend/src/: Admin.vue  Home.vue  main.ts  utility.ts
frontend/src/assets/: base.css
frontend/src/components/: Input.vue  LocationsTable.vue  PinInner.vue  header.vue  vue-tweet.vue
migrations/2022-03-04-181534_create_locations/: down.sql  up.sql
migrations/2022-03-06-033903_update_locations/: down.sql  up.sql
migrations/2022-03-06-042548_uuid_index/: down.sql  up.sql
migrations/2022-03-06-044745_add_provisional_locations/: down.sql  up.sql
migrations/2022-03-06-045805_bankruptcy/: up.sql
migrations/2022-09-24-084148_add_cookies/: down.sql  up.sql
src/: lib.rs  main.rs  models.rs  schema.rs
