[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = { version = "2", features = ["serde"] }
serde = "1.0.136"
serde_json = "1.0"
atomic = "0.5"
base64 = "0.13.0"
rand = {version = "0.8.5", features = ["std_rng"]}

rocket = { version = "0.5.0-rc.2", features = ["json"]}

diesel = { version = "1.4.4", features = ["sqlite", "chrono"] }
dotenv = "0.15.0"
uuid = {version = "0.8", features = ["serde", "v4"] }

chrono = {version = "0.4", features = ["serde"] }

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.2"
default-features = false
features = ["diesel_sqlite_pool"]